Implementing cleanup action.