@@ -9,21 +9,21 @@ import java.util.List;
 
 public class CommandExecutor {
 
-    public static List<String> exec(String cmd, boolean readErrorStream) {
+    public static List<String> execOnInputStream(String cmd) {
+        return exec(false, cmd);
+    }
+
+    public static List<String> execOnErrorStream(String cmd) {
+        return exec(true, cmd);
+    }
+
+    private static List<String> exec(boolean errorStream, String cmd) {
         List<String> lines = new ArrayList<>();
         try {
-            Process process = Runtime.getRuntime().exec(cmd);
-            InputStream err = process.getErrorStream();
-            InputStream in = process.getInputStream();
-            BufferedReader errReader = new BufferedReader(new InputStreamReader(err));
+            Process process = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c", cmd });
+            InputStream in = errorStream ? process.getErrorStream() : process.getInputStream();
             BufferedReader inReader = new BufferedReader(new InputStreamReader(in));
             String line;
-
-            if (readErrorStream) {
-                while ((line = errReader.readLine()) != null) {
-                    lines.add(line);
-                }
-            }
 
             while ((line = inReader.readLine()) != null) {
                 lines.add(line);
